# scrapeClaw

./: .env.example  .gitignore  GUIDE.md  README.md  install.sh  main.py  pyproject.toml  requirements.txt
config/: config.yaml
config/sites/: example.yaml
core/: claude_processor.py  config_manager.py  excel_formatter.py  scraper_engine.py
utils/: helpers.py  validators.py
