[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapeclaw"
version = "0.1.0"
description = "Enterprise web scraper with Claude AI extraction and Excel output"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "openpyxl>=3.1.0",
    "rich>=14.0.0",
    "typer>=0.24.0",
    "anthropic>=0.40.0",
    "tenacity>=9.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "fake-useragent>=1.5.0",
]

[project.optional-dependencies]
js = ["playwright>=1.40.0"]

[project.scripts]
scrapeclaw = "main:app"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
